# chessAnalyzer

./: .env  .gitignore  LICENSE  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  server.py
static/css/: chessboard-arrows.css  style.css
static/js/: app.js  chessboard-arrows.js
templates/: index.html
