[project]
name = "chessanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "python-chess[gaviota]>=1.999",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
